[package]
name = "smart_house"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "examples"
]

[dependencies]
tokio = { version = "1.15.0", features = ["rt","net", "macros", "rt-multi-thread"] }
thiserror = "1.0.30"
rand = "0.8.5"